Changelog
=========

0.1.6 - 
------------------

- DB migrations.
  [ggozad]


0.1.5 - 2023-11-01
------------------

- Fix whitespace bug in model selection screen.

0.1.4 - 2023-10-18
------------------

- Show template, system, and params in the model selection screen.
  [ggozad]

- Click to copy to clipboard.
  [ggozad]

0.1.3 - 2023-10-17
------------------

- Remove pydantic and as a result, the rust dependency & build in homebrew.
  [ggozad]

- Show discreet info on running model.
  [ggozad]

0.1.2 - 2023-10-17
------------------

- Ability to rename chats.
  [ggozad]

0.1.0 - 2023-10-15
------------------

- Initial release.
  [ggozad]