@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "oterm"
-version = "0.1.5"
+version = "0.1.6"
 description = "A text-based terminal client for Ollama."
 authors = ["Yiorgis Gozadinos <ggozadinos@gmail.com>"]
 homepage = "https://github.com/ggozad/oterm"
